# python-xmlsec

./: pyproject.toml  setup.py
.github/workflows/: macosx.yml  manylinux.yml  sdist.yml  wheels.yml
